--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @use "theme";
+@use "print";
 @use "sass:color";
 
 body {
@@ -8,7 +9,7 @@ body {
         box-sizing: border-box;
         outline: none;
         border: none;
-        font-size: 1rem;
+        font-size: 1.125rem;
         font-weight: 400;
     }
 
@@ -80,8 +81,9 @@ nav a {
 }
 
 main {
-    max-width: 1000px;
+    max-width: 720px;
     margin: 1rem auto;
+    line-height: 1.5;
 
     h1,
     h2,
