--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -9,9 +9,19 @@
         visibility: collapse !important;
     }
 
-    figure figcaption,
-    figure figcaption * {
-        color: hsl(0, 0%, 12.5%) !important;
-        text-decoration: none !important;
+    main {
+        max-width: unset !important;
+
+        figure {
+            img {
+                max-width: 720px;
+            }
+
+            figcaption,
+            figcaption * {
+                color: hsl(0, 0%, 12.5%) !important;
+                text-decoration: none !important;
+            }
+        }
     }
 }
