fixed some styling issues

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,5 +1,6 @@
 $tab-size: 1rem;
 $color-background: #13161c;
 $color-foreground: rgb(208, 208, 208);
+$color-comment: #4c566a;
 $color-primary: #26c6da;
 $timing: 250ms;
