--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -4,7 +4,8 @@
         color: black !important;
     }
 
-    nav {
+    nav,
+    footer {
         display: none !important;
         visibility: collapse !important;
     }
