added medium rss feed to head

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,11 @@ const props = Astro.props;
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link
+            href="https://medium.com/feed/@tsukinoko"
+            rel="alternate"
+            type="application/rss+xml"
+        />
         <link rel="canonical" href={canonical} />
         <meta property="og:url" content={canonical} />
         <meta name="generator" content={Astro.generator} />
