added more links to footer

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,6 +75,7 @@ const props = Astro.props;
             <slot />
         </main>
         <footer>
+            <h2>About</h2>
             <table>
                 <tbody>
                     <tr>
@@ -94,6 +95,46 @@ const props = Astro.props;
                         <td
                             ><Link href="https://pages.cloudflare.com/">
                                 Cloudflare Pages
+                            </Link></td
+                        >
+                    </tr>
+                    <tr>
+                        <th>Source</th>
+                        <td
+                            ><Link href="https://github.com/Frank-Mayer/blog">
+                                GitHub
+                            </Link></td
+                        >
+                    </tr>
+                </tbody>
+            </table>
+
+            <h2>Me</h2>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Homepage</th>
+                        <td
+                            ><Link href="https://www.frank-mayer.io">
+                                www.frank-mayer.io
+                            </Link></td
+                        >
+                    </tr>
+                    <tr>
+                        <th>Mastodon</th>
+                        <td
+                            ><a
+                                rel="me"
+                                href="https://hello.2heng.xin/@tsukinoko"
+                                target="_blank">@tsukinoko@littlefo.rest</a
+                            ></td
+                        >
+                    </tr>
+                    <tr>
+                        <th>Twitter</th>
+                        <td
+                            ><Link href="https://twitter.com/FF1493FF">
+                                @FF1493FF
                             </Link></td
                         >
                     </tr>
