--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -106,6 +106,14 @@ const props = Astro.props;
                             </Link></td
                         >
                     </tr>
+                    <tr>
+                        <th>API (CMS wrapper)</th>
+                        <td
+                            ><Link href="https://github.com/Frank-Mayer/zeug">
+                                zeug
+                            </Link></td
+                        >
+                    </tr>
                 </tbody>
             </table>
 
