updated mastodon account

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -133,8 +133,8 @@ const props = Astro.props;
                         <td
                             ><a
                                 rel="me"
-                                href="https://hello.2heng.xin/@tsukinoko"
-                                target="_blank">@tsukinoko@littlefo.rest</a
+                                href="https://mastodon.social/@tsukinoko"
+                                target="_blank">@tsukinoko@mastodon.social</a
                             ></td
                         >
                     </tr>
